feat: updated state to 5 and removed audit node (#82)